# meeting-scribe

./: CLAUDE.md  README.md  pyproject.toml
.claude/rules/: accessibility.md  api-design.md  classification-rules.md  conventions.md  dependencies.md  environment.md  error-handling.md  git.md  guardrails.md  performance.md  security.md  tasks.md  testing.md  versioning.md  workflow.md
.cursor/rules/: accessibility.mdc  api-design.mdc  classification-rules.mdc  conventions.mdc  dependencies.mdc  environment.mdc  error-handling.mdc  git.mdc  guardrails.mdc  mcp-routing.mdc  performance.mdc  security.mdc  tasks.mdc  testing.mdc  versioning.mdc  workflow.mdc
docs/: study-guide.md
src/meeting_scribe/: __init__.py  cli.py  config.py  graph.py  live.py  log.py  recorder.py  state.py
src/meeting_scribe/nodes/: __init__.py  emotion.py  extract.py  summarize.py  transcribe.py
